--- a/promigrante/movil/www/templates/login.html
+++ b/promigrante/movil/www/templates/login.html
@@ -1,4 +1,4 @@
-<div class="im-wrapper">
+<div class="im-wrapper bglogin">
 	<br>
 	<br>
 	<br>
@@ -19,5 +19,5 @@
 		
 		
 	</div>
-	<button class="button button-block button-calm ink" ng-click="goTo('subscribe')" data-ink-color="#9DEAFF" data-ink-opacity="1"> Subcribirse </button>
+	<button class="button button-block pm-button-blue ink" ng-click="goTo('subscribe')" data-ink-color="#9DEAFF" data-ink-opacity="1"> Subcribirse </button>
 </div>
