--- a/promigrante/movil/www/templates/intro_slider.html
+++ b/promigrante/movil/www/templates/intro_slider.html
@@ -24,7 +24,7 @@
 				<h4 class="text-center" style="color:#ee5923;">Contratación fácil</h4>
 				<p class="text-center"><img class="item" style="border:none;" src="img/intro/3.png"></p>
 				<p class="text-center" style="color:#ee5923;">Contratar te lleva 3 sencillos pasos. <br> <strong>¡No estas solo!</strong></p>
-				<button id="start_button" class="button button-block pm-bg-green" ng-click="goTo('login')"> COMENZAR </button>
+				<button id="start_button" class="button button-block pm-button-green icon balanced" ng-click="goTo('login')"> COMENZAR </button>
 			</div>
 		</div>
 	</ion-slide-page>
