--- a/promigrante/movil/www/templates/login.html
+++ b/promigrante/movil/www/templates/login.html
@@ -16,8 +16,6 @@
 		<br />
 -->
 		<button class="button button-block button-stable ink" ng-click="goTo('app.panic')" data-ink-color="#9DEAFF" data-ink-opacity="1"> Entrar </button>
-		
-		
 	</div>
-	<button class="button button-block pm-button-blue ink" ng-click="goTo('subscribe')" data-ink-color="#9DEAFF" data-ink-opacity="1"> Subcribirse </button>
+	<button class="button button-block pm-button-blue icon balanced" ng-click="goTo('subscribe')" data-ink-color="#9DEAFF" data-ink-opacity="1"> Suscribirse </button>
 </div>
