--- a/promigrante/movil/www/templates/login.html
+++ b/promigrante/movil/www/templates/login.html
@@ -17,5 +17,10 @@
 -->
 		<button class="button button-block button-stable ink" ng-click="goTo('app.panic')" data-ink-color="#9DEAFF" data-ink-opacity="1"> Entrar </button>
 	</div>
-	<button class="button button-block pm-button-blue icon balanced" ng-click="goTo('subscribe')" data-ink-color="#9DEAFF" data-ink-opacity="1"> Suscribirse </button>
+<!--	<button class="button button-block  icon balanced" data-ink-color="#9DEAFF" data-ink-opacity="1"> Suscribirse </button>-->
+	
+<div  id="btnCancelAlarm" ng-click="goTo('subscribe')" class="bar bar-footer pm-button-blue ink-dark">
+		<div class="title">Suscribirse</div>
+	</div>
 </div>
+	
