--- a/promigrante/movil/www/templates/contingency_plan_edit.html
+++ b/promigrante/movil/www/templates/contingency_plan_edit.html
@@ -1,19 +1,21 @@
 <ion-view view-title="Editar plan de contingencia">
 	<ion-content>
-		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">Complete los campos</strong> </div>
+		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">COMPLETE INFORMACIÓN</strong> </div>
 		<div class="im-wrapper">
 			<div class="list">
 				<label class="item item-input item-stacked-label bold"> <span class="input-label">Nombre completo</span>
-					<input type="text" placeholder="Jorge Hernandez" value="Miguel Gómez"> </label>
+					<input type="text" style="padding: 14px;" placeholder="Jorge Hernandez" value="Miguel Gómez"> </label>
 				<label class="item item-input item-stacked-label bold"> <span class="input-label">Teléfono celular</span>
-					<input type="text" placeholder="Teléfono" value="7287635799"> </label>
+					<input type="text" style="padding: 14px;" placeholder="Teléfono" value="7287635799"> </label>
 				<label class="item item-input item-stacked-label bold"> <span class="input-label">Teléfono fijo</span>
-					<input type="text" placeholder="Teléfono fijo" value="7287635799"> </label>
+					<input type="text" style="padding: 14px;" placeholder="Teléfono fijo" value="7287635799"> </label>
 				<label class="item item-input item-stacked-label bold"> <span class="input-label">Email</span>
-					<input type="email" placeholder="nombre@email.com" value="mgomez@hotmail.com"> </label>
+					<input type="email" style="padding: 14px;" placeholder="nombre@email.com" value="mgomez@hotmail.com"> </label>
+<!--
 				<label class="item item-input item-stacked-label bold"> <span class="input-label">Plan de contingencia</span>
 					<textarea placeholder="¿Qué te gustaría que le dijeramos a esta persona si activas la alarma?" rows="10">Llamar a mi hermano y avisarle que se comunique con mi amigo Luis y avise a mi mamá que estoy bien.</textarea>
 				</label>
+-->
 				<label class="item item-input item-select">
 					<div class="input-label bold"> País de origen </div>
 					<select>
