--- a/promigrante/movil/www/templates/login.html
+++ b/promigrante/movil/www/templates/login.html
@@ -13,12 +13,12 @@
 				<input type="checkbox"> </label> Acepto los términos y condiciones. </div>
 		<br />
 -->
-		<button class="button button-block button-stable ink" ng-click="goTo('app.panic')" data-ink-color="#9DEAFF" data-ink-opacity="1"> Entrar </button>
+		<button class="button button-block pm-button-orange ink" ng-click="goTo('app.panic')" data-ink-color="#9DEAFF" data-ink-opacity="1"> Entrar </button>
 	</div>
 <!--	<button class="button button-block  icon balanced" data-ink-color="#9DEAFF" data-ink-opacity="1"> Suscribirse </button>-->
 	
 <div  id="btnCancelAlarm" ng-click="goTo('subscribe')" class="bar bar-footer pm-button-blue ink-dark">
-		<div class="title">Suscribirse</div>
+		<div class="title">¡Prueba el servicio!</div>
 	</div>
 </div>
 	
