--- a/promigrante/movil/www/templates/payment.html
+++ b/promigrante/movil/www/templates/payment.html
@@ -44,7 +44,7 @@
 				<label class="item item-input item-floating-label"> <span class="input-label">CCV</span>
 					<input type="number" placeholder="CCV"> </label>
 				<br />
-				<button id="start_button" class="button button-block button-calm" ng-click="showConfirmation()" ng-click="goTo('login')"> Pagar </button>
+				<button id="start_button" class="button button-block button-calm" ng-click="showConfirmation()"> Pagar </button>
 				<br>
 				<br>
 				<br>
