--- a/promigrante/movil/www/css/style.css
+++ b/promigrante/movil/www/css/style.css
@@ -1,296 +1,347 @@
 /* Empty. Add your own CSS if you like */
-/* Utilities */
 
-.link {
-    color: #116262;
-    font-weight: bold;
+@font-face {
+	font-family: 'Bebas';
+	src: url('../fonts/BebasNeue-Regular.eot');
+	src: url('../fonts/BebasNeue-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/BebasNeue-Regular.woff') format('woff'), url('../fonts/BebasNeue-Regular.ttf') format('truetype'), url('../fonts/BebasNeue-Regular.svg#Bebas') format('svg');
 }
 
-h2 {
-    color: #17335c;
+@font-face {
+	font-family: 'LatoBold';
+	src: url('../fonts/Lato-Bold.eot');
+	src: url('../fonts/Lato-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Bold.woff') format('woff'), url('../fonts/Lato-Bold.ttf') format('truetype'), url('../fonts/Lato-Bold.svg#LatoBold') format('svg');
+}
+
+@font-face {
+	font-family: 'Conv_HelveticaLTStd-Light';
+	src: url('../fonts/HelveticaLTStd-Light.eot');
+	src: local('☺'), url('../fonts/HelveticaLTStd-Light.woff') format('woff'), url('../fonts/HelveticaLTStd-Light.ttf') format('truetype'), url('../fonts/HelveticaLTStd-Light.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+body{
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	background-color: #cceaec;
+}
+
+h1 {
+	font-family: 'Bebas';
+	text-align: center;
+	width: 100%;
 }
 
 h4 {
-    color: #f15922;
-    font-size: 22px;
-    margin-bottom: 16px;
+	font-family: 'LatoBold';
+	text-align: center;
+}
+
+ion-header-bar {
+	font-family: 'Bebas';
+}
+
+.bar-subheader {
+	
+	font-family: 'LatoBold';
+}
+
+
+/* Utilities */
+
+.link {
+	color: #116262;
+	font-weight: bold;
+}
+
+h2 {
+	color: #17335c;
+}
+
+h4 {
+	color: #f15922;
+	font-size: 22px;
+	margin-bottom: 16px;
 }
 
 h4:first-child {
-    border-top: none;
-    padding-top: initial;
+	border-top: none;
+	padding-top: initial;
 }
 
 .title-bordered {
-    border-top: solid 2px #bbb;
-    padding-top: 30px;
+	border-top: solid 2px #bbb;
+	padding-top: 30px;
 }
 
 p {
-    color: #555;
-    margin: 0 0 25px;
+	color: #555;
+	margin: 0 0 25px;
 }
 
 .no-border {
-    border: none;
+	border: none;
 }
 
 .static {
-    position: static;
+	position: static;
 }
 
 .bold {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .border-top {
-    border-top: solid 1px #ccc;
-    padding-top: 30px;
+	border-top: solid 1px #ccc;
+	padding-top: 30px;
 }
 
 .blue-grey-900 {
-    background-color: #263238 !important;
-    color: #fff;
+	background-color: #263238 !important;
+	color: #fff;
 }
+
+
 /* Menu */
 
 .menu .bar.bar-header.expanded {
-    background-image: url('../img/material-graphite.jpg');
-    background-size: 120%;
-    background-position: 0%;
-    transition: all .5s ease-in-out;
+	background-image: url('../img/material-graphite.jpg');
+	background-size: 120%;
+	background-position: 0%;
+	transition: all .5s ease-in-out;
 }
 
 .menu.menu-left * {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .item-radio input:checked ~ .item-content {
-    background: transparent;
+	background: transparent;
 }
 
 .menu-open .ion-navicon {
-    transform: rotate(-360deg);
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
+	transform: rotate(-360deg);
+	-webkit-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 }
 
 .menu-open .ion-navicon:before {
-    content: "\f2ca";
+	content: "\f2ca";
 }
 
 .item.item-radio .radio-icon {
-    opacity: 1;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
+	opacity: 1;
+	-webkit-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 }
 
 .item.item-radio:active .radio-icon {
-    opacity: 0;
-    transform: scale(1.6);
-    -webkit-transition: all 0.1s ease-in-out;
-    transition: all 0.1s ease-in-out;
+	opacity: 0;
+	transform: scale(1.6);
+	-webkit-transition: all 0.1s ease-in-out;
+	transition: all 0.1s ease-in-out;
 }
 
 .directions.button-bar {
-    margin: 0 auto;
-    width: 33.333%;
+	margin: 0 auto;
+	width: 33.333%;
 }
 
 .directions.button-bar button {
-    line-height: 26px;
+	line-height: 26px;
 }
 
 .ion-arrow-right-c.top-left:before {
-    transform: rotate(-135deg);
+	transform: rotate(-135deg);
 }
 
 .ion-arrow-right-c.top-right:before {
-    transform: rotate(-45deg);
+	transform: rotate(-45deg);
 }
 
 .ion-arrow-right-c.bottom-left:before {
-    transform: rotate(-225deg);
+	transform: rotate(-225deg);
 }
 
 .ion-arrow-right-c.bottom-right:before {
-    transform: rotate(45deg);
+	transform: rotate(45deg);
 }
 
 #modal {
-    background-color: #ef4e3a;
-    border-radius: 100%;
-    box-shadow: 0 -6px 12px rgba(0, 0, 0, 0.2);
-    position: fixed;
-    height: 50%;
-    bottom: 0;
-    opacity: 0;
-    width: 700px;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
+	background-color: #ef4e3a;
+	border-radius: 100%;
+	box-shadow: 0 -6px 12px rgba(0, 0, 0, 0.2);
+	position: fixed;
+	height: 50%;
+	bottom: 0;
+	opacity: 0;
+	width: 700px;
+	-webkit-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
 }
 
 .expand #modal {
-    background-color: #DBDBDB;
-    border-radius: 0;
-    border-top: solid 4px #ef4e3a;
-    opacity: 1;
-    z-index: 9;
+	background-color: #DBDBDB;
+	border-radius: 0;
+	border-top: solid 4px #ef4e3a;
+	opacity: 1;
+	z-index: 9;
 }
+
+
 /* CODE */
 
 .code {
-    color: #333;
-    font-family: monospace;
-    padding: 10px;
-    white-space: pre;
+	color: #333;
+	font-family: monospace;
+	padding: 10px;
+	white-space: pre;
 }
 
 .code-wrapper {
-    padding-bottom: 30px;
-    padding-top: 15px;
+	padding-bottom: 30px;
+	padding-top: 15px;
 }
 
 .code-wrapper::before {
-    color: #1B5E20;
-    font-family: "Ionicons";
-    speak: none;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    text-rendering: auto;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    content: '\f216 ';
+	color: #1B5E20;
+	font-family: "Ionicons";
+	speak: none;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	text-rendering: auto;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	content: '\f216 ';
 }
 
 .code-wrapper.active::before {
-    content: '\f207 ';
+	content: '\f207 ';
 }
 
 .code-wrapper .toggle {
-    color: #4CAF50;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 10px 8px;
-    text-decoration: underline;
+	color: #4CAF50;
+	cursor: pointer;
+	display: inline-block;
+	font-size: 16px;
+	font-weight: bold;
+	padding: 10px 8px;
+	text-decoration: underline;
 }
 
 .code-wrapper .code {
-    opacity: 0;
-    margin-top: -20px;
-    height: 0;
-    overflow: hidden;
-    position: absolute;
-    transition: 0.1s all ease-in-out;
-    z-index: 9999999999;
+	opacity: 0;
+	margin-top: -20px;
+	height: 0;
+	overflow: hidden;
+	position: absolute;
+	transition: 0.1s all ease-in-out;
+	z-index: 9999999999;
 }
 
 .code-wrapper.code-wrapper-last .code {
-    position: relative;
+	position: relative;
 }
 
 .code-wrapper.active .code {
-    background: #f9f9f9;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
-    left: 16px;
-    height: initial;
-    margin-top: 15px;
-    padding: 15px;
-    right: 16px;
-    opacity: 1;
-    transition: 0.3s all ease-in-out;
-    width: initial;
+	background: #f9f9f9;
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+	left: 16px;
+	height: initial;
+	margin-top: 15px;
+	padding: 15px;
+	right: 16px;
+	opacity: 1;
+	transition: 0.3s all ease-in-out;
+	width: initial;
 }
 
 .popover {
-    left: initial !important;
-    right: 16px !important;
-    top: 16px !important;
-}
-.platform-android .popover{
-margin-top:10px;
+	left: initial !important;
+	right: 16px !important;
+	top: 16px !important;
 }
 
-
-.box{
-  height: 100%;
+.platform-android .popover {
+	margin-top: 10px;
 }
-ion-slides{
-  height: 100vh !important;
-}
-
 
 .box {
-  height: 100%;
+	height: 100%;
 }
 
 ion-slides {
-  height: 100vh !important;
+	height: 100vh !important;
+}
+
+.box {
+	height: 100%;
+}
+
+ion-slides {
+	height: 100vh !important;
 }
 
 .bgColor_0 {
-  background-color: #cc2244;
+	background-color: #cc2244;
 }
 
 .bgColor_1 {
-  background-color: #cc6622;
+	background-color: #cc6622;
 }
 
 .bgColor_2 {
-  background-color: #cccc22;
+	background-color: #cccc22;
 }
 
 .bgColor_3 {
-  background-color: #66cc22;
+	background-color: #66cc22;
 }
 
 .bgColor_4 {
-  background-color: #22cc44;
+	background-color: #22cc44;
 }
 
 .bgColor_5 {
-  background-color: #22ccaa;
+	background-color: #22ccaa;
 }
 
 .bgColor_6 {
-  background-color: #2288cc;
+	background-color: #2288cc;
 }
 
 .bgColor_7 {
-  background-color: #2222cc;
+	background-color: #2222cc;
 }
 
 .bgColor_8 {
-  background-color: #8822cc;
+	background-color: #8822cc;
 }
 
 .bgColor_9 {
-  background-color: #cc22aa;
+	background-color: #cc22aa;
 }
-
-
 
 .menublue {
-    color: #17335c;
+	color: #17335c;
 }
-
 
 .bglogin {
-	
 	background-color: #cceaec;
-	
 }
-
 
 .pm-button-blue {
 	background-color: #0e2645;
 	color: #fff;
 }
+
+.pm-button-orange {
+	background-color: #f15922;
+	color: #fff;
+}
+
 .pm-button-green {
 	background-color: #43bea4;
 	color: #fff;
@@ -301,15 +352,19 @@ ion-slides {
 	color: #fff;
 }
 
+.pm-bar-orange {
+	background-color: #f15922;
+	color: #fff;
+}
+
 .pm-bar-green {
 	background-color: #aadde0;
 	color: #f15926;
 	font-weight: bold;
 }
 
-.pm-bg-green{
+.pm-bg-green {
 	background-color: #cceaec;
-	
 }
 
 #fab {
@@ -318,18 +373,84 @@ ion-slides {
 }
 
 .pm-detona {
-	color:#f15926;
+	font-family: 'LatoBold';
+	color: #f15926;
 	font-weight: bold;
 	font-size: 24px;
 	text-align: center;
 }
 
-p{
-	color:#0e2645;
+p {
+	color: #0e2645;
 }
 
 .pm-instructions {
-	
 	font-size: 14px;
+}
+
+ion-header-bar h1 {
+	color: #fff;
+}
+
+.pm-bg-menu{
+	background-color: #dff1f1;
 	
 }
+
+.pm-menu-title{
+	color:#0e2645;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;	
+}
+
+ion-list ion-item{
+	font-family: "Conv_HelveticaLTStd-Light", Helvetica, Arial, sans-serif;	
+	color:#102645;
+}
+
+label{
+	font-family: "Conv_HelveticaLTStd-Light", Helvetica, Arial, sans-serif;	
+	color:#102645;
+}
+
+.pm-menu-email {
+	
+	font-size: 12px;
+}
+
+ion-view ion-content{
+	background-color: #cceaec;
+}
+
+ .pm-input {
+ 	font-size: 16px;
+ 	border-color: #cccccc;
+ 	border-style: solid;
+ 	border-radius: 10px;
+ 	border-width: 0px;
+ 	text-shadow: 0px 0px 0px rgba(42, 42, 42, .75);
+ 	box-shadow: 1px 1px 7px 0px rgba(42, 42, 42, .33);
+ 	padding: 14px;
+	font-family: "Conv_HelveticaLTStd-Light", Helvetica, Arial, sans-serif;	
+ }
+ 
+ .pm-input:focus {
+ 	outline: none;
+ }
+
+.list-inset{
+	margin: 0px;
+}
+
+/*
+
+ion-view{
+	background-color: red;
+	
+}
+
+ion-view ion-content{
+	background-color: black;
+	
+}*/
+
+
