--- a/promigrante/movil/www/templates/menu.html
+++ b/promigrante/movil/www/templates/menu.html
@@ -12,11 +12,11 @@
 		<button id="fab" class="button button-assertive button-fab button-fab-bottom-right"> <i class="icon ion-ios-bell"></i> </button>
 		<ion-nav-view name="menuContent"></ion-nav-view>
 	</ion-side-menu-content>
-	<ion-side-menu side="left">
-		<ion-header-bar class="expanded"> <img src="img/logo.png" class="avatar motion spin fade">
-			<div class="menu-bottom"> ProMigrante </div>
+	<ion-side-menu side="left" class="pm-bg-menu">
+		<ion-header-bar class="expanded"> <img src="img/avatar.jpg" class="avatar motion spin fade">
+			<div class="menu-bottom pm-menu-title"> Jorge Hernández <br> <span class="pm-menu-email text-muted">jhernandez1989@hotmail.com</span> </div>
 		</ion-header-bar>
-		<ion-content class="stable-bg has-expanded-header">
+		<ion-content class="has-expanded-header">
 			<ion-list>
 				<ion-item nav-clear menu-close href="#/app/panic"><i class="icon ion-ios-bell"></i> Botón de pánico </ion-item>
 				<ion-item nav-clear menu-close href="#/app/contingency_plan"><i class="icon ion-android-document"></i> Plan familiar de contingencia </ion-item>
