--- a/promigrante/movil/www/templates/panic.html
+++ b/promigrante/movil/www/templates/panic.html
@@ -1,22 +1,13 @@
-<ion-view view-title="{{(show_timer)?'Alarma activada...':'Botón de pánico'}}" class="pm-bg-green">
+<ion-view view-title="{{(show_timer)?'Alarma activada...':'Botón de pánico'}}">
 	<ion-content>
 		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">{{(show_timer)?'BOTÓN DE PÁNICO ACTIVADO':'¿ESTÁS EN PROBLEMAS?'}}</strong> </div>
 		<div class="im-wrapper">
-
 			<p ng-if="!show_timer" class="text-center" ng-click="start_panic()" style="margin-top:-17px">
-				<!--				<button class="button button-assertive button-fab ink-dark button-raised " style="width:200px; height:200px;"> <i class="icon" style="width:200px; height:200px; font-size:30px">{{help_text}}</i> </button>--><img ng-show="!button_pressed" width="100%" src="img/assets/btn-panic-normal.png"> <img ng-show="button_pressed" width="100%" src="img/assets/btn-panic-pressed.png"> </p>
+				<!--				<button class="button button-assertive button-fab ink-dark button-raised " style="width:200px; height:200px;"> <i class="icon" style="width:200px; height:200px; font-size:30px">{{help_text}}</i> </button>--><img ng-if="!button_pressed" width="100%" src="img/assets/btn-panic-normal.png"> <img ng-if="button_pressed" width="100%" src="img/assets/btn-panic-pressed.png"> </p>
 			<p ng-if="!show_timer" style="margin-top:-20px;margin-bottom:7px;" class="pm-detona">DETONA EL BOTÓN</p>
-			
-			
-			<p ng-if="show_timer" class="text-center bold"> Estimado Jorge, se han iniciado los procesos y protocolos de atención a tu solicitud.<br>
-			
-			</p>
-
-			
-			
-			
+			<p ng-if="show_timer" class="text-center bold"> Estimado Jorge, se han iniciado los procesos y protocolos de atención a tu solicitud.
+				<br> </p>
 			<p ng-if="!show_timer" class="text-center pm-instructions">Envía tus coordenadas al momento o llama al Call Center para recibir ayuda inmediata.</p>
-			
 			<a href="tel:18009999999">
 				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-green icon balanced ion-ios-telephone-outline"> Llamar al Call Center </button>
 			</a>
@@ -31,7 +22,6 @@
 				</div>
 			</div>
 			<p ng-if="show_timer" class="text-center" style="margin:0px"><img ng-if="show_timer" width="60%" src="img/map.png"></p>
-			
 			<div ng-if="show_timer" class="row">
 				<div class="col col-20">
 					<a class="item item-icon-left" style="border:none"> <i class="icon balanced ion-ios-checkmark-outline"></i></a>
@@ -73,19 +63,16 @@
 				</div>
 			</div>
 			<!-- / Protocolo -->
-
 			<h4 ng-if="false" class="border-top"><i class="icon ion-information-circled"></i> Recomendaciones</h4>
 			<div ng-if="false" class="list">
 				<a class="item item-icon-left"> <i class="icon ion-android-hand"></i> Manten la calma. </a>
-				<a class="item item-icon-left"> <i class="icon ion-android-map"></i> Localizaremos consulado cercano.
-					></a>
+				<a class="item item-icon-left"> <i class="icon ion-android-map"></i> Localizaremos consulado cercano. ></a>
 				<a class="item item-icon-left"> <i class="icon ion-android-people"></i> Contactaremos a tu familia.
 					<!--                    <span class="badge badge-assertive">0</span>--></a>
 			</div>
-			</div>
+		</div>
 		<br>
-		<br>
-	</ion-content>
+		<br> </ion-content>
 	<div ng-if="show_timer" id="btnCancelAlarm" ng-click="onCancelPanic()" class="bar bar-footer bar-assertive ink-dark">
 		<div class="title">Cancelar alarma</div>
 	</div>
