--- a/promigrante/movil/www/templates/contingency_plan_survey.html
+++ b/promigrante/movil/www/templates/contingency_plan_survey.html
@@ -11,35 +11,35 @@
 			
 			<div class="list">
 				
-				<label class="item item-input item-select">
-					<div class="input-label bold"> ¿Tiene algún padecimiento de salud? </div>
+				
+					<div class="bold"> ¿Tiene algún padecimiento de salud? </div>
 					
-					<select>
-						<option>Si</option>
-						<option selected>No</option>
-					</select>
-				</label>
-				<label class="item item-input item-select">
-					<div class="input-label bold"> ¿Toma algún medicamento? </div>
-					<select>
-						<option>Si</option>
-						<option selected>No</option>
-					</select>
-				</label>
-				<label class="item item-input item-select">
-					<div class="input-label bold"> ¿Se encuentra en tratamiento médico? </div>
-					<select>
-						<option>Si</option>
-						<option selected>No</option>
-					</select>
-				</label>
-				<label class="item item-input item-select">
-					<div class="input-label bold"> ¿Tiene Hijos? </div>
-					<select>
-						<option>Si</option>
-						<option selected>No</option>
-					</select>
-				</label>
+					<ion-list>
+						<ion-radio ng-model="uno.choice_a" ng-value="A">Si</ion-radio>
+						<ion-radio ng-model="uno.choice_a" ng-value="B">No</ion-radio>
+					</ion-list>
+				
+				
+					<div class="bold"> ¿Toma algún medicamento? </div>
+					<ion-list>
+						<ion-radio ng-model="uno6.choice_a6" ng-value="A2">Si</ion-radio>
+						<ion-radio ng-model="uno6.choice_a6" ng-value="B2">No</ion-radio>
+					</ion-list>
+				
+				
+					<div class="bold"> ¿Se encuentra en tratamiento médico? </div>
+					<ion-list>
+						<ion-radio ng-model="uno5.choice_5" ng-value="A3">Si</ion-radio>
+						<ion-radio ng-model="uno5.choice_5" ng-value="B3">No</ion-radio>
+					</ion-list>
+				
+				
+					<div class="bold"> ¿Tiene Hijos? </div>
+					<ion-list>
+						<ion-radio ng-model="uno2.choice_2" ng-value="A4">Si</ion-radio>
+						<ion-radio ng-model="uno2.choice_2" ng-value="B4">No</ion-radio>
+					</ion-list>
+				
 				
 				
 			
