--- a/promigrante/movil/www/templates/subscribe.html
+++ b/promigrante/movil/www/templates/subscribe.html
@@ -5,7 +5,7 @@
 	<h1 class="title">Suscripción a ProMigrante</h1> </ion-header-bar>
 <ion-view view-title="Suscripción">
 	<ion-content>
-		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">REGISTRE SUS DATOS</strong> </div>
+		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title" style="color: #f15926;">REGISTRE SUS DATOS</strong> </div>
 		<div class="im-wrapper">
 			<!--			<p>Para disfrutar de los beneficios de xTuFamilia registre la siguiente información.</p>-->
 			<div class="list">
