--- a/promigrante/movil/www/templates/help_support.html
+++ b/promigrante/movil/www/templates/help_support.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Ayuda y soporte">
 	<ion-content>
-		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">X mi protección</strong> </div>
+		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">ProMigrante</strong> </div>
 		<div class="im-wrapper">
 			<!-- Ionic Components -->
 			<h4 class="border-top">
