--- a/promigrante/movil/www/templates/subscribe.html
+++ b/promigrante/movil/www/templates/subscribe.html
@@ -16,23 +16,24 @@
                 Datos de registro
             </h4>
 -->
+				<form>
 				<div class="item item-avatar"> <img src="img/profile-photo.jpg">
 					<p><strong>Foto de perfil</strong></p>
 					<p><em>Seleccione o capture una.</em></p>
 				</div>
 				<div class="list">
-					<label class="item item-input item-stacked-label"> <span class="input-label">Nombre completo</span>
+					<label class="item item-input item-stacked-label"> <span class="input-label">Nombre completo *</span>
 						<input type="text" style="padding: 14px;" class="pm-input" placeholder="Nombre y apellido(s)"> </label>
-					<label class="item item-input item-stacked-label"> <span class="input-label">No. de celular</span>
+					<label class="item item-input item-stacked-label"> <span class="input-label">No. de celular *</span>
 						<input type="tel" style="padding: 14px;" class="pm-input" placeholder="+44999999999"> </label>
-					<label class="item item-input item-stacked-label"> <span class="input-label">ZC habita</span>
+					<label class="item item-input item-stacked-label"> <span class="input-label">ZC habita *</span>
 						<input type="tel" style="padding: 14px;" class="pm-input" placeholder="Código postal de donde habita"> </label>
-					<label class="item item-input item-stacked-label"> <span class="input-label">Email</span>
+					<label class="item item-input item-stacked-label"> <span class="input-label">Email *</span>
 						<input type="email" style="padding: 14px;" class="pm-input" placeholder="usuario@mail.com"> </label>
 				</div>
 				
 				
-				
+				</form>
 				
 				
 				<!--
