--- a/promigrante/app/views/content.html
+++ b/promigrante/app/views/content.html
@@ -22,6 +22,11 @@
           <i class="mdi-communication-chat i-24"></i> Chats activos
         </a>
       </li>
+			<li>
+        <a md-ink-ripple ui-sref="access.signin">
+                  <i class="icon mdi-action-exit-to-app i-20"></i>
+        </a>
+      </li>
 <!--
       <li>
         <a md-ink-ripple ng-click="app.search.show = true">
