--- a/promigrante/app/views/profamilia/login.html
+++ b/promigrante/app/views/profamilia/login.html
@@ -2,12 +2,12 @@
     <div class="navbar">
       <div class="navbar-brand m-t-lg text-center">
         <img src="images/promigrante/logo-login.png" height="50px">
-        <span class="m-l inline">ProMigrante Back Office</span>
+        <span class="m-l inline login-title text-center">ProMigrante Back Office</span>
       </div>
     </div>
 
-    <div class="p-lg panel md-whiteframe-z1 text-color m">
-      <div class="m-b text-sm">
+    <div class="p-lg -z1 text-color m">
+      <div class="m-b text-sm text-center">
         Acceda con su usuario y contraseña
       </div>
       <form name="form" action="#/app/events/open">
@@ -20,7 +20,7 @@
           <label>Contraseña</label>
         </div>      
         
-        <button md-ink-ripple type="submit" class="md-btn md-raised btn-block p-h-md pm-button-blue">Acceder</button>
+        <button md-ink-ripple type="submit" class="md-btn md-raised pm-bar-blue btn-block p-h-md">Acceder</button>
       </form>
     </div>
 
