--- a/promigrante/app/views/profamilia/events_open.html
+++ b/promigrante/app/views/profamilia/events_open.html
@@ -1,5 +1,5 @@
 <div class="col-sm-12">
-	<h1 class="font-thin h3">Eventos activos<span class="badge"></span></h1>
+	<h1 class="font-thin h3">Eventos activos (7)<span class="badge"></span></h1>
 	<p class="text-muted">Aquí llegan todos los reportes de botón de pánico.</p>
 </div>
 <div class="col-sm-8">
@@ -171,7 +171,6 @@
 <div class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-12">
-			<h5>Reportes (8)</h5>
 			<div class="md-list md-whiteframe-z0 m-b">
 				<div class="md-list-item  pm-item-selected">
 					<div class="md-list-item-left"> <img src="images/a9.jpg" class="w-full circle"> </div>
